# Projeto_Basico-Django_com-GithubActions_CI

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
backend/: settings.py  urls.py
core/: admin.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/css/: estilos.css
core/static/js/: script.js
core/templates/: 404.html  contato.html  index.html  produto.html
